Add Jenkins pipeline for form validation build

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,1 +1,47 @@
-
+pipeline {
+    agent any
+    stages {
+        stage('Checkout') {
+            steps {
+                git 'pipeline {
+    agent any
+    stages {
+        stage('Checkout') {
+            steps {
+                git 'https://github.com/renga511/form.git'
+                echo 'Code pulled successfully!'
+            }
+        }
+        stage('Build HTML') {
+            steps {
+                bat 'dir'
+            }
+        }
+        stage('Display Link') {
+            steps {
+                script {
+                    echo "✅ Form Validation HTML ready!"
+                    echo "<a href='file:///C:/ProgramData/Jenkins/.jenkins/workspace/${env.JOB_NAME}/form-validation.html' target='_blank'>Open Form Validation</a>"
+                }
+            }
+        }
+    }
+}'
+                echo 'Code pulled successfully!'
+            }
+        }
+        stage('Build HTML') {
+            steps {
+                bat 'dir'
+            }
+        }
+        stage('Display Link') {
+            steps {
+                script {
+                    echo "✅ Form Validation HTML ready!"
+                    echo "<a href='file:///C:/ProgramData/Jenkins/.jenkins/workspace/${env.JOB_NAME}/form-validation.html' target='_blank'>Open Form Validation</a>"
+                }
+            }
+        }
+    }
+}
